--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@ DerivedData
 # http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
 #
 #Pods/
+
+*.xcuserstate
+
+cocoa-string-size-performance.xcodeproj/project.xcworkspace/xcuserdata/Abhi.xcuserdatad/UserInterfaceState.xcuserstate
+
+*.xcuserstate
